--- a/index.html
+++ b/index.html
@@ -96,30 +96,40 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>About us</h3>
-              <h2>What is Attendancebos?</h2>
-              <p>
+              <h2>What is Attendbos?</h2>
+              <p class="justify-content">
                 Our team consists of industry experts and experienced professionals who are dedicated to helping you streamline your operations and enhance security. We understand the challenges that come with managing attendance and access control, and we're committed to providing you with the tools and support you need to overcome them. <br><br>
-                With our QR code solution, you can streamline attendance management by allowing employees or students to check-in with just a quick scan, saving time and improving accuracy. Plus, our real-time attendance reports make it easy to track attendance and identify trends over time.<br><br>
+                <!-- With our QR code solution, you can streamline attendance management by allowing employees or students to check-in with just a quick scan, saving time and improving accuracy. Plus, our real-time attendance reports make it easy to track attendance and identify trends over time.<br><br> -->
 
-                Our web kiosk service is perfect for organizations that need to manage visitor sign-ins or employee check-ins. Our sleek and user-friendly kiosks allow visitors or employees to easily register their attendance or access information, improving efficiency and reducing wait times.<br><br>
+                <!-- Our web kiosk service is perfect for organizations that need to manage visitor sign-ins or employee check-ins. Our sleek and user-friendly kiosks allow visitors or employees to easily register their attendance or access information, improving efficiency and reducing wait times.<br><br> -->
 
-                And with our fingerprint hardware solution, you can ensure that only authorized individuals are granted access to secure areas or sensitive information. Our biometric devices are fast, accurate, and secure, providing you with peace of mind and helping you stay compliant with industry regulations.<br><br>
+                <!-- And with our fingerprint hardware solution, you can ensure that only authorized individuals are granted access to secure areas or sensitive information. Our biometric devices are fast, accurate, and secure, providing you with peace of mind and helping you stay compliant with industry regulations.<br><br> -->
 
-                At our website, we're dedicated to providing our customers with the most advanced and reliable attendance and access management solutions available. Contact us today to learn more and see how we can help your business or organization thrive.
+                <!-- At our website, we're dedicated to providing our customers with the most advanced and reliable attendance and access management solutions available. Contact us today to learn more and see how we can help your business or organization thrive. -->
               </p>
               </div>
               <div class="content-button">
               <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <!-- <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Read More</span>
                   <i class="bi bi-arrow-right"></i>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/about.jpg" class="img-fluid" alt=""> -->
+            <div class="flip-box">
+              <div class="flip-box-inner">
+                <div class="flip-box-front">
+                  <img src="assets/img/about.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="flip-box-back">
+                  <img src="assets/img/shake-hand.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
