--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Welcome to Attendancebos</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Your go-to source for cutting-edge QR code, web kiosk, and fingerprint hardware services. At our company, we're passionate about providing businesses and organizations with the most advanced and efficient solutions for attendance and access management.</h2>
+          <h1 data-aos="fade-up">Welcome to Attendbos</h1>
+          <h2 class="justify-content" data-aos="fade-up" data-aos-delay="400">Innovative Solutions for Transforming Your Business in the Digital Age.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/hero-img-attendbos.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
