--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/attendancebos-logo/attendancebos-logo/icon-ori.png" rel="icon">
+  <link href="assets/img/attendancebos-logo/__MACOSX/attendancebos-logo/icon-ori.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -43,8 +43,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
-        <span>Attendancebos</span>
+        <img src="assets/img/attendancebos-logo/attendancebos-logo/logo-ori.png" alt="">
       </a>
 
       <nav id="navbar" class="navbar">
@@ -144,8 +143,8 @@
             <div class="service-box blue">
               <i class="ri-discuss-line icon"></i>
               <h3>Qr Code</h3>
-              <p>At our company, we're dedicated to providing you with the most advanced and reliable QR code solutions available. 
-                Our team of experts is here to help you implement and optimize your system, ensuring that you get the most out of this powerful technology. 
+              <p class="justify-content">At our company, we're dedicated to providing you with the most advanced and reliable QR code solutions available. 
+                <!-- Our team of experts is here to help you implement and optimize your system, ensuring that you get the most out of this powerful technology.  -->
                 Contact us today to learn more and see how QR codes can help your business or organization thrive.
 
               </p>
@@ -157,7 +156,7 @@
             <div class="service-box orange">
               <i class="ri-discuss-line icon"></i>
               <h3>Web Kiosk</h3>
-              <p>With our advanced kiosk solutions, you can ensure that attendance tracking or visitor 
+              <p class="justify-content">With our advanced kiosk solutions, you can ensure that attendance tracking or visitor 
                 management is always up-to-date and accurate, reducing the risk of errors or discrepancies.
                 Contact us today to learn more and see how web kiosks can help your business or organization thrive.
               </p>
@@ -169,10 +168,11 @@
             <div class="service-box green">
               <i class="ri-discuss-line icon"></i>
               <h3>Fingerprint Hardware</h3>
-              <p>Our fingerprint hardware systems use advanced biometric technology to identify and authenticate users
-                 based on their unique fingerprints. This provides a high level of security, since fingerprints are difficult 
-                 to fake or duplicate. Plus, since fingerprints are unique to each individual, our systems can provide accurate 
-                 identification with a high degree of confidence. Contact us today to learn more and see how fingerprint hardware 
+              <p class="justify-content">Our fingerprint hardware systems use advanced biometric technology to identify and authenticate users
+                 based on their unique fingerprints. 
+                 <!-- This provides a high level of security, since fingerprints are difficult to fake or duplicate.  -->
+                 <!-- Plus, since fingerprints are unique to each individual, our systems can provide accurate  identification with a high degree of confidence.  -->
+                 Contact us today to learn more and see how fingerprint hardware 
                  can help your business or organization thrive.</p>
               <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
@@ -280,7 +280,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Get the latest updates straight to your inbox.</p>
           </div>
           <div class="col-lg-6">
             <form action="" method="post">
@@ -296,10 +296,9 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/logo.png" alt="">
-              <span>Attendancebos</span>
+              <img src="assets/img/attendancebos-logo/attendancebos-logo/logo-ori.png" alt="">
             </a>
-            <p>Revolutionize Your Attendance and Access Management System with AttendanceBos: Your One-Stop-Shop for Delivering Streamlined and Secure Solutions for Your Business Needs</p>
+            <p class="justify-content">Revolutionize Your Attendance and Access Management System with AttendanceBos: Your One-Stop-Shop for Delivering Streamlined and Secure Solutions for Your Business Needs</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -347,7 +346,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Attendbos</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
