--- a/index.html
+++ b/index.html
@@ -276,87 +276,60 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
-            <h4>Our Newsletter</h4>
-            <p>Get the latest updates straight to your inbox.</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/attendancebos-logo/attendancebos-logo/logo-ori.png" alt="">
+              <img src="assets/img/attendancebos-logo/attendancebos-logo/logo-white.png" alt="">
             </a>
-            <p class="justify-content">Revolutionize Your Attendance and Access Management System with AttendanceBos: Your One-Stop-Shop for Delivering Streamlined and Secure Solutions for Your Business Needs</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
+            <p class="justify-content">Revolutionize Your Attendance and Access <br> Management System with Attendbos</p>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Useful links</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Features</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Features</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Qr Code</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Kiosk</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Fingerprint Hardware</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-            <p>
-              - <br>
-              - <br><br>
-              <strong>Phone:</strong> -<br>
-              <strong>Email:</strong> -<br>
-            </p>
-
+          <div class="col-lg-3 col-md-12 social-links text-center text-md-start">
+            <h4>Social Media</h4>
+            <div class=" mt-3"></div>
+              <a href="#" class="twitter"><i class="bi bi-twitter"></i> <span>Twitter</span></a>
+              <br>
+              <a href="#" class="facebook"><i class="bi bi-facebook"></i> <span>Facebook</span></a>
+              <br>
+              <a href="#" class="instagram"><i class="bi bi-instagram"></i> <span>Instagram</span></a>
+              <br>
+              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> <span>Linkedin</span></a>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Attendbos</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
-    </div>
+    </div> -->
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
