--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#issues">Features</a></li>
+          <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -144,7 +144,7 @@
 
         <header class="section-header">
           <h2>Features</h2>
-          <p>Get to Know Our Website's Features</p>
+          <p>Our Signature Features</p>
         </header>
         <div class="row col-md-12">
           <div class="col-md-2">
@@ -275,7 +275,42 @@
       </div>
 
     </section><!-- End issues Section -->
+    <!-- ======= Solution Section ======= -->
+    <section id="solution" class="solution">
+      <div class="container" data-aos="fade-up">
 
+        <header class="section-header">
+          <p>Our Solutions</p>
+        </header>
+        <div class="row gx-0">
+          <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
+            <img src="assets/img/solution.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="content">
+              <h2>Security and compliance:</h2>
+              <p class="justify-content">
+                <i class="bi bi-check icon"></i>Secure your business with fingerprint hardware, two-factor authentication, VPNs, and stay compliant using asset tracking and CCTV monitoring.
+              </p>
+                <h2>Efficiency and productivity:</h2>
+              <p class="justify-content">
+                <i class="bi bi-check icon"></i>Optimize operations with QR codes and web kiosks for self-service, mobile workforce management software for optimized scheduling, 
+                and asset tracking software and CCTV cameras for resource allocation and process monitoring.
+              </p>
+                <h2>Customer experience:</h2>
+              <p class="justify-content">
+                <i class="bi bi-check icon"></i>Improve customer experience with QR codes and web kiosks for quick and easy access to information, and optimize traffic and processes with CCTV cameras.</p>
+              </div>
+            </div>
+          </div>
+         
+
+        </div>  
+      </div>
+     
+
+    </section>
+    <!-- End Solution Section --> 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
 
