--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -78,9 +79,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+        <!--<div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
           <img src="assets/img/hero-img-attendbos.png" class="img-fluid" alt="">
-        </div>
+        </div>---->
       </div>
     </div>
 
@@ -414,6 +415,35 @@
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
+
+  <!-- ======= Call to Action Section ======= -->
+  <section id="cta" class="cta">
+    <div class="container" data-aos="fade-up">
+      <div class="cta-content" data-aos="fade-up" data-aos-delay="200">
+  
+        <div class="content">
+          <h2>Get started with AttendBos</h2>
+          <p class="justify-content">
+            Optimize Your Workforce Management: Get Started with <br>
+            Attendbos Today and Simplify Attendance Tracking <br>for Streamlined Efficiency.
+          </p>
+          <div class="images">
+            <img src="assets/img/icons8-group-of-projects-96.png" alt="Left Image" class="left-image">
+            <img src="assets/img/icons8-inspection-96.png" alt="Right Image" class="right-image">
+          </div>
+          <div class="buttons">
+            <a href="#" class="btn btn-primary">Get Started Now</a>
+            <a href="#" class="btn btn-secondary">Request Free Demo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  
+  
+  
+  <!-- End Call to Action Section --> 
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
