--- a/index.html
+++ b/index.html
@@ -424,8 +424,7 @@
         <div class="content">
           <h2>Get started with AttendBos</h2>
           <p class="justify-content">
-            Optimize Your Workforce Management: Get Started with <br>
-            Attendbos Today and Simplify Attendance Tracking <br>for Streamlined Efficiency.
+            Simplify attendance tracking and optimize your workforce with AttendBos today. <br>
           </p>
           <div class="buttons">
             <a href="#" class="btn btn-primary">Get Started Now</a>
