change features design #24 /in progress

--- a/index.html
+++ b/index.html
@@ -138,57 +138,62 @@
 
     </section>
     <!-- End About Section -->
-    <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+<!-- ======= Features Section ======= -->
+<section id="features" class="features">
 
-      <div class="container" data-aos="fade-up">
+  <div class="container" data-aos="fade-up">
 
-        <header class="section-header">
-          <h2>Features</h2>
-          <p>Our Signature Features</p>
-        </header>
-        <div class="row col-md-12">
-          <div class="col-md-2">
-            <div class="features-box blue" >
-              <i class="ri-qr-code-line icon"></i>
-              <h4>Qr Code</h4>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <div class="features-box blue">
-              <i class="ri-computer-line icon"></i>
-              <h4>Web Kiosk</h4>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <div class="features-box blue">
-              <i class="ri-fingerprint-line icon"></i>
-              <h4>Fingerprint Hardware</h4>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <div class="features-box blue">
-              <i class="ri-smartphone-line icon"></i>
-              <h4>Mobile workforce management</h4>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <div class="features-box blue">
-              <i class="ri-barcode-line icon"></i>
-              <h4>Asset tracking system</h4>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <div class="features-box blue">
-              <i class="ri-camera-line icon"></i>
-              <h4>Surveillance cameras</h4>
-            </div>
-          </div>
+    <header class="section-header">
+      <h2>Features</h2>
+      <p>Explore our amazing features</p><br>
+      <h4>Discover How Our Attendance Tracking Solution Can Benefit Your Business</h4>
+    </header>
+
+    <div class="row">
+      <div class="col-md-3">
+        <div class="features-box blue">
+          <i class="ri-window-line icon"></i>
+          <div class="line"></div>
+          <h4>Auto-Attendance</h4>
+          <h5> Our system tracks attendance automatically based on schedules, reducing errors and manual input.</h5>
+          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
         </div>
       </div>
+      <div class="col-md-3">
+        <div class="features-box blue">
+          <i class="ri-history-line icon"></i>
+          <div class="line"></div>
+          <h4>Live Reporting</h4>
+          <h5>Quickly view attendance data and generate reports for informed workforce decisions.</h5>
+          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="features-box blue">
+          <i class="ri-settings-5-line icon"></i>
+          <div class="line"></div>
+          <h4>Customizable Settings</h4>
+          <h5>Customize time-off requests and overtime rules to fit your business needs.</h5>
+          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="features-box blue">
+          <i class="ri-smartphone-line icon"></i>
+          <div class="line"></div>
+          <h4>Mobile Access</h4>
+          <h5>Easily track attendance and manage your workforce on any device.</h5>
+          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+        </div>
+      </div>
+      
+    </div>
 
-    </section>
-    <!-- End Features Section -->
+  </div>
+
+</section>
+<!-- End Features Section -->
+
     <!-- ======= issues Section ======= -->
     <section id="issues" class="issues">
 
