--- a/index.html
+++ b/index.html
@@ -431,14 +431,10 @@
             <a href="#" class="btn btn-secondary">Request Free Demo</a>
           </div>
         </div>
-        <div class="images">
-          <img src="assets/img/icons8-group-of-projects-96.png" alt="Left Image" class="left-image">
-          <img src="assets/img/icons8-inspection-96.png" alt="Right Image" class="right-image">
-        </div>
       </div>
     </div>
     
-  </section>
+  </section><br>
   
   
   <!-- End Call to Action Section --> 
