--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div class="line"></div>
           <h4>Auto-Attendance</h4>
           <h5> Our system tracks attendance automatically based on schedules, reducing errors and manual input.</h5>
-          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+          <a href="#" class="read-more align-center"><span>Learn More</span> <i class="bi bi-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-md-3">
@@ -165,7 +165,7 @@
           <div class="line"></div>
           <h4>Live Reporting</h4>
           <h5>Quickly view attendance data and generate reports for informed workforce decisions.</h5>
-          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+          <a href="#" class="read-more align-center"><span>Learn More</span> <i class="bi bi-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-md-3">
@@ -174,7 +174,7 @@
           <div class="line"></div>
           <h4>Customizable Settings</h4>
           <h5>Customize time-off requests and overtime rules to fit your business needs.</h5>
-          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+          <a href="#" class="read-more align-center"><span>Learn More</span> <i class="bi bi-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-md-3">
@@ -182,8 +182,8 @@
           <i class="ri-smartphone-line icon"></i>
           <div class="line"></div>
           <h4>Mobile Access</h4>
-          <h5>Easily track attendance and manage your workforce on any device.</h5>
-          <a class="learn-more" href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+          <h5>Easily track attendance and manage your workforce on any device with our user-friendly mobile app.</h5><br>
+          <a href="#" class="read-more align-center"><span>Learn More</span> <i class="bi bi-arrow-right"></i></a>
         </div>
       </div>
       
@@ -192,6 +192,7 @@
   </div>
 
 </section>
+
 <!-- End Features Section -->
 
     <!-- ======= issues Section ======= -->
