--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>About us</h3>
-              <h2>What is Attendbos?</h2>
+              <h2>Your Solution for Efficient Workforce Management</h2>
               <p class="justify-content">
                 Our team consists of industry experts and experienced professionals who are dedicated to helping you streamline your operations and enhance security. We understand the challenges that come with managing attendance and access control, and we're committed to providing you with the tools and support you need to overcome them. <br><br>
                 <!-- With our QR code solution, you can streamline attendance management by allowing employees or students to check-in with just a quick scan, saving time and improving accuracy. Plus, our real-time attendance reports make it easy to track attendance and identify trends over time.<br><br> -->
@@ -120,15 +120,14 @@
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <!-- <img src="assets/img/about.jpg" class="img-fluid" alt=""> -->
-            <div class="flip-box">
-              <div class="flip-box-inner">
-                <div class="flip-box-front">
-                  <img src="assets/img/about.jpg" class="img-fluid" alt="">
-                </div>
-                <div class="flip-box-back">
+            <div class="static-image">
+              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            </div>
+          </div>          
+            
+                <!--<div class="flip-box-back">
                   <img src="assets/img/shake-hand.png" class="img-fluid" alt="">
-                </div>
+                </div>--->
               </div>
             </div>
           </div>
