suggest a few header style #23

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Welcome to Attendbos</h1>
-          <h2 class="justify-content" data-aos="fade-up" data-aos-delay="400">Innovative Solutions for Transforming Your Business in the Digital Age.</h2>
+          <h1 data-aos="fade-up">Streamline Attendance Tracking</h1>
+          <h2  data-aos="fade-up" data-aos-delay="400">Your Solution for Efficient Workforce Management</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
