change problem design #32

--- a/index.html
+++ b/index.html
@@ -197,8 +197,6 @@
     <!-- ======= Issues Section ======= -->
     <section id="issues" class="issues">
 
-      
-
         <header class="section-header">
           <!-- <h2>Common Problems</h2 -->
           <p>Common Problems</p>
@@ -206,40 +204,41 @@
         <div class="container">
           <div class="left-column">
             <ul class="list">
-              <li class="list-item" data-name="Security Concern">Security Concern</li>
-              <li class="list-item" data-name="Inefficiencies in operations">Inefficiencies in operations</li>
-              <li class="list-item" data-name="Lack of visibility and control">Lack of visibility and control</li>
-              <li class="list-item" data-name="Customer experience">Customer experience</li>
-              <li class="list-item" data-name="Compliance requirements">Compliance requirements</li>
-              <li class="list-item" data-name="Operational Visibility">Operational Visibility</li>
+              <li class="list-item" data-name="Security Concern"><i class="ri-shield-line"></i>  Security Concern</li>
+              <li class="list-item" data-name="Inefficiencies in operations"><i class="ri-settings-5-line"></i> Inefficiencies in operations</li>
+              <li class="list-item" data-name="Lack of visibility and control"><i class="ri-eye-line"></i> Lack of visibility and control</li>
+              <li class="list-item" data-name="Customer experience"><i class="ri-user-heart-line"></i> Customer experience</li>
+              <li class="list-item" data-name="Compliance requirements"><i class="ri-file-line"></i> Compliance requirements</li>
+              <li class="list-item" data-name="Operational Visibility"><i class="ri-line-chart-line"></i> Operational Visibility</li>
             </ul>
-          </div>
+          </div>                   
           <div class="right-column">
             <div id="item-details">
-              <p>Select an item to see details.</p>
+              <img class="image" src="assets/img/security.png" alt="Security Concern">
+              <p>Businesses and organizations can face security threats which can cause financial loss, damage, or compromise confidential information. </p>
             </div>
             <div class="item" data-name="Security Concern">
-              <img class="image" src="security-concern.jpg" alt="Security Concern">
+              <img class="image" src="assets/img/security.png" alt="Security Concern">
               <p>Businesses and organizations can face security threats which can cause financial loss, damage, or compromise confidential information. </p>
             </div>
             <div class="item" data-name="Inefficiencies in operations">
-              <img class="image" src="inefficiencies-in-problems.jpg" alt="Inefficiencies in operations">
+              <img class="image" src="assets/img/inefficient.jpg" alt="Inefficiencies in operations">
               <p>Inefficient processes can cause delays, errors, and reduce productivity. </p>
             </div>
             <div class="item" data-name="Lack of visibility and control">
-              <img class="image" src="lack-of-visibility-and-control.jpg" alt="Lack of visibility and control">
+              <img class="image" src="assets/img/lack-of-control.jpg" alt="Lack of visibility and control">
               <p>Businesses may struggle to track and manage their assets, inventory, or workforce in real-time. </p>
             </div>
             <div class="item" data-name="Customer experience">
-              <img class="image" src="customer-experience.jpg" alt="Customer experience">
+              <img class="image" src="assets/img/customer-experience.jpg" alt="Customer experience">
               <p>Business with low customer-experience satisfaction may lead to bankruptcy. </p>
             </div>
             <div class="item" data-name="Compliance requirements">
-              <img class="image" src="compliance-requirements.jpg" alt="Compliance requirements">
+              <img class="image" src="assets/img/compliance.jpg" alt="Compliance requirements">
               <p>Some industries may require businesses to comply with specific regulations, such as tracking employee hours or monitoring environmental conditions.</p>
             </div>
             <div class="item" data-name="Operational Visibility">
-              <img class="image" src="operational-visibility.jpg" alt="Operational Visibility">
+              <img class="image" src="assets/img/operation.jpg" alt="Operational Visibility">
               <p>Businesses may need to have visibility into their operations to identify bottlenecks, inefficiencies, and areas for improvement. </p>
             </div>
           </div>
