change problem design #32 /in progress

--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
           <div class="left-column">
             <ul class="list">
               <li class="list-item" data-name="Security Concern"><i class="ri-shield-line"></i>  Security Concern</li>
-              <li class="list-item" data-name="Inefficiencies in operations"><i class="ri-settings-5-line"></i> Inefficiencies in operations</li>
-              <li class="list-item" data-name="Lack of visibility and control"><i class="ri-eye-line"></i> Lack of visibility and control</li>
-              <li class="list-item" data-name="Customer experience"><i class="ri-user-heart-line"></i> Customer experience</li>
-              <li class="list-item" data-name="Compliance requirements"><i class="ri-file-line"></i> Compliance requirements</li>
+              <li class="list-item" data-name="Inefficiencies in Operations"><i class="ri-settings-5-line"></i> Inefficiencies in operations</li>
+              <li class="list-item" data-name="Lack of Visibility and Control"><i class="ri-eye-line"></i> Lack of visibility and control</li>
+              <li class="list-item" data-name="Customer Experience"><i class="ri-user-heart-line"></i> Customer experience</li>
+              <li class="list-item" data-name="Compliance Requirements"><i class="ri-file-line"></i> Compliance requirements</li>
               <li class="list-item" data-name="Operational Visibility"><i class="ri-line-chart-line"></i> Operational Visibility</li>
             </ul>
           </div>                   
