update problem design #35

--- a/index.html
+++ b/index.html
@@ -191,16 +191,18 @@
   </div>
 
 </section>
+<!-- End Feature Section -->
+
+<!-- ======= Problem Section ======= -->
 
 <section id="problem" class="problem">
   <div class="container" data-aos="fade-up">
-
     <div class="row gx-0">
       <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
         <div class="static-image">
           <img src="assets/img/issue.jpg" class="img-fluid" alt="">
         </div>
-      </div>   
+      </div>
 
       <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
         <div class="content">
@@ -208,47 +210,69 @@
           <h2>Common Problem</h2>
         </div>
         <hr>
+
         <div class="row gx-0">
           <div class="col-lg-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-wrench"></i></div>
-              <h4 class="title"><a href="">Inefficiencies in Processes</a></h4>
-              <p class="description">Inefficient processes can cause delays, errors, and reduce productivity. </p>
+              <h4 class="title"><a href="">Inefficiency & errors</a></h4>
+              <p class="description">Inefficient and inaccurate attendance tracking methods can create problems.</p>
             </div>
+          </div>
+
+          <div class="col-lg-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bi bi-shield-fill"></i></div>
-              <h4 class="title"><a href="">Security Concerns</a></h4>
-              <p class="description">Businesses and organizations can face security threats which can cause financial loss, damage, or compromise confidential information. </p>
-            </div>
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              <h4 class="title"><a href="">Operational Visibility</a></h4>
-              <p class="description">Businesses may need to have visibility into their operations to identify bottlenecks, inefficiencies, and areas for improvement. </p>
+              <h4 class="title"><a href="">Security Access</a></h4>
+              <p class="description">Control access to secure areas and sensitive information with our biometric devices.</p>
             </div>
           </div>
+        </div>
+
+        <div class="row gx-0">
           <div class="col-lg-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bi bi-eye"></i></div>
-              <h4 class="title"><a href="">Lack of Visibility and Control</a></h4>
-              <p class="description">Businesses may struggle to track and manage their assets, inventory, or workforce in real-time. </p>
-            </div>
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bi bi-people"></i></div>
-              <h4 class="title"><a href="">Customer Experience</a></h4>
-              <p class="description">Business with low customer-experience satisfaction may lead to bankruptcy. </p>
-            </div>
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-check-circle"></i></div>
-              <h4 class="title"><a href="">Compliance Requirement</a></h4>
-              <p class="description">Some industries may require businesses to comply with specific regulations, such as tracking employee hours or monitoring environmental conditions. Failure to comply with these regulations can result in legal penalties, fines, or other consequences.</p>
+              <h4 class="title"><a href="">Difficulties Tracking Tardiness</a></h4>
+              <p class="description">Accurately tracking employee tardiness can be a challenge with manual methods.</p>
             </div>
           </div>
+
+          <div class="col-lg-6">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bi bi-bar-chart"></i></div>
+              <h4 class="title"><a href="">Limited Data Insight</a></h4>
+              <p class="description">Automated attendance tracking systems provide better data insights.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>   
+
+<!-- End Problem Section -->
+
+<!-- ======= Call to Action Section ======= -->
+<section id="cta" class="cta">
+  <div class="container" data-aos="fade-up">
+    <div class="cta-content" data-aos="fade-up" data-aos-delay="200">
+
+      <div class="content">
+        <h2>Get started with AttendBos</h2>
+        <p class="justify-content">
+          Simplify attendance tracking and optimize your workforce with AttendBos today. <br>
+        </p>
+        <div class="buttons">
+          <a href="#" class="btn btn-primary">Get Started Now</a>
+          <a href="#" class="btn btn-secondary">Request Free Demo</a>
         </div>
       </div>
     </div>
   </div>
-</section>    
 
+</section>
     
   <!-- End Call to Action Section --> 
 
