--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="row gx-0">
       <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
         <div class="static-image">
-          <img src="assets/img/issue.jpg" class="img-fluid" alt="">
+          <img src="assets/img/issue/3.png" class="img-fluid" alt="">
         </div>
       </div>
 
