update solution design #36 /in progress

--- a/index.html
+++ b/index.html
@@ -281,32 +281,53 @@
 
   <!----=====Solution Section ====-->
   <section id="solution" class="solution">
-    <div class="container" data-aos="fade-up">
+    <header class="section-header">
+      <h2>Solutions</h2>
+      <p>Our Solutions</p>
+    </header>
 
-      <header class="section-header">
-        <p>Our Solutions</p>
-      </header>
-      <div class="row gx-0">
-        <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/solution.jpg" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-          <div class="content">
-            <h2>Security and compliance:</h2>
-            <p class="justify-content">
-              <i class="bi bi-check icon"></i>Secure your business with fingerprint hardware, two-factor authentication, VPNs, and stay compliant using asset tracking and CCTV monitoring.
-            </p>
-              <h2>Efficiency and productivity:</h2>
-            <p class="justify-content">
-              <i class="bi bi-check icon"></i>Optimize operations with QR codes and web kiosks for self-service, mobile workforce management software for optimized scheduling, 
-              and asset tracking software and CCTV cameras for resource allocation and process monitoring.
-            </p>
-              <h2>Customer experience:</h2>
-            <p class="justify-content">
-              <i class="bi bi-check icon"></i>Improve customer experience with QR codes and web kiosks for quick and easy access to information, and optimize traffic and processes with CCTV cameras.</p>
-            </div> 
-          </div> </div> </div>
-        </section>
+    <div class="container light-blue" data-aos="fade-up">
+  
+      <nav class="navigation">
+        <button class="nav-button active" data-target="efficient-tracking">
+          <i class="bi bi-clipboard2-data"></i> Efficient Tracking
+        </button>
+        <button class="nav-button" data-target="access-control">
+          <i class="bi bi-lock-fill"></i> Access Control
+        </button>
+        <button class="nav-button" data-target="real-time-tracking">
+          <i class="bi bi-clock-fill"></i> Real-time Tracking
+        </button>
+        <button class="nav-button" data-target="data-analytics">
+          <i class="bi bi-bar-chart-line"></i> Data Analytics
+        </button>
+      </nav>
+  
+      <div class="description active" id="efficient-tracking">
+        <!--<h3>Efficient Tracking</h3><----->
+        <p>Automate attendance tracking using biometric or RFID technology to reduce errors and increase efficiency.<br><br>
+          Provide employees with training on how to use the attendance tracking system correctly to minimize errors.<br><br>
+          Offer an analytics module that identifies patterns and trends in attendance data, allowing for quick identification and resolution of any discrepancies.</p>
+      </div>
+  
+      <div class="description" id="access-control">
+        <h3>Access Control</h3>
+        <p>Description of the Access Control solution goes here.</p>
+      </div>
+  
+      <div class="description" id="real-time-tracking">
+        <h3>Real-time Tracking</h3>
+        <p>Description of the Real-time Tracking solution goes here.</p>
+      </div>
+  
+      <div class="description" id="data-analytics">
+        <h3>Data Analytics</h3>
+        <p>Description of the Data Analytics solution goes here.</p>
+      </div>
+  
+    </div>
+  </section>
+  
     <!-- End Solution Section --> 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
