--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
           <div class="col-lg-3 col-md-12 social-links text-center text-md-start">
             <h4>Social Media</h4>
-            <div class=" mt-3"></div>
+            <!-- <div class=" mt-3"></div> -->
               <a href="#" class="twitter"><i class="bi bi-twitter"></i> <span>Twitter</span></a>
               <br>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i> <span>Facebook</span></a>
