change color & design to fit with web theme #40

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <div class="col-md-6">
           <div class="image-sol">
-            <img src="assets/img/solution-pic.png" class="img-fluid" alt="">
+            <img src="assets/img/solution-2.jpg" class="img-fluid" alt="">
           </div>
         </div>
     
